# coulomb-ssg

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
goal-project/: settings.py
project/: index.html
project/blog/: index.html
project/blog/2023/02/14/: index.html
project/components/: Layout.jinja
src/coulomb/: __init__.py  __main__.py  build.py  configurations.py  main.py  processors.py  types.py  utils.py
tests/: test_build.py  test_configuration.py  test_coulomb.py  test_integration.py
tests/projects/just-settings/: settings.py
tests/projects/just-settings-blog-object/: settings.py
tests/projects/test-project/: settings.py
tests/projects/test-project/authors/: author.yml
tests/projects/test-project/colors/: black.yml
tests/projects/test-project/my-assets/: nothing.css
tests/projects/test-project/page-bodies/: page.md
tests/projects/test-project/post/: test-post.md
tests/projects/test-project/project/: test-project.yml
